--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
+        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0|^12.0"
     },
     "extra": {
         "laravel": {
